<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="?attr/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/back_arrow_icon"
            app:navigationIconColor="?attr/colorTextOnPrimary"
            android:background="?attr/colorTabs"
            app:title="@string/login"
            android:id="@+id/login_activity_toolbar"
            app:titleTextColor="?attr/colorTextOnPrimary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="96dp"
            android:paddingEnd="24dp">

            <EditText
                android:id="@+id/login_activity_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="?attr/colorText"
                android:textColorHint="@color/colorPlaceholder"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/login_activity_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="?attr/colorText"
                android:textColorHint="@color/colorPlaceholder"
                android:textSize="16sp" />


            <Button
                android:id="@+id/login_activity_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/submit"
                android:onClick="SubmitLogin"
                android:textColor="?attr/colorText"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>